--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -7,7 +7,7 @@
 .login-grid {
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
+  align-items: center; 
   justify-content: center;
 }
 
@@ -25,7 +25,7 @@
 }
 
 .form-control {
-  width: 40%;
+  width: 100%;
   padding: 8px;
   font-size: 16px;
   border: 1px solid #ccc;
@@ -53,4 +53,9 @@
 .btn-danger {
   background-color: #dc3545;
   color: #fff;
+}
+
+.error {
+    color: red;
+    font-size: small;
 }
