--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -48,6 +48,30 @@ nav {
 .dropdown-menu li a:hover {
   color: #2190ff;
 }
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+.dropdown:after {
+    content: "";
+    display: inline-block;
+    margin-left: 5px;
+    vertical-align: middle;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 5px solid #929497;
+  }
+.dropdown-content {
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 150px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    min-height: 150px;
+    padding: 1rem;
+    border-radius: 5px;
+    margin-top: .5rem;
+  }
 .nav__logo {
   font-size: 2rem;
   font-weight: 600;
@@ -83,6 +107,7 @@ nav {
 .link a:hover {
   color: #3685fb;
 }
+
 
 /* Media queries for mobile responsiveness */
 
