--- a/src/Components/InstantConsultation/FindDoctorSearch/FindDoctorSearch.css
+++ b/src/Components/InstantConsultation/FindDoctorSearch/FindDoctorSearch.css
@@ -110,6 +110,9 @@
     height: 40px;
     border: 1px solid rgb(59, 58, 58);
     z-index: -99;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
 }
 .search-doctor-input-results {
